--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,6 +9,8 @@
     </tr>
   </table>
 
+	
+	<%= button_to 'Checkout', new_order_path, method: :get %>
   <%= button_to 'Svuota carrello', cart, method: :delete,
       data: { confirm: 'Svuotare davvero il carrello?' } %>
 <% end %>
