--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -10,7 +10,9 @@
   </table>
 
 	
-	<%= button_to 'Checkout', new_order_path, method: :get %>
+	<% unless @order %>
+    <%= button_to 'Checkout', new_order_path, method: :get %>
+  <% end %>
   <%= button_to 'Svuota carrello', cart, method: :delete,
       data: { confirm: 'Svuotare davvero il carrello?' } %>
 <% end %>
