--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,15 @@
           <a href="http://www.../contacts">Contacts</a>
         </li>
       </ul>
+      
+      <% if session[:user_id] %>
+        <ul>
+          <li><%= link_to 'Ordini', orders_path %></li>
+          <li><%= link_to 'Products', products_path %></li>
+          <li><%= link_to 'Users', users_path %></li>
+        </ul>
+        <%= button_to 'Logout', logout_path, method: :delete %>
+      <% end %>
     </div>
     <div id="main">
       <%= yield %>
