--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <% end %>
       <ul>
         <li>
-          <a href="http://www...">Home</a>
+          <%= link_to 'Home', store_path %>
         </li>
         <li>
           <a href="http://www..../faq">Questions</a>
@@ -33,15 +33,17 @@
           <a href="http://www.../contacts">Contacts</a>
         </li>
       </ul>
-      
+
+      <ul>
       <% if session[:user_id] %>
-        <ul>
           <li><%= link_to 'Ordini', orders_path %></li>
           <li><%= link_to 'Products', products_path %></li>
           <li><%= link_to 'Users', users_path %></li>
-        </ul>
         <%= button_to 'Logout', logout_path, method: :delete %>
-      <% end %>
+      <% else %>
+					<li><%= link_to 'Login', login_path %></li>
+			<% end %>
+      </ul>
     </div>
     <div id="main">
       <%= yield %>
