--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 <% unless cart.line_items.empty? %>
-  <h2>Carrello</h2>
+  <h2><%= t('.title') %></h2>
   <table>
     <%= render(cart.line_items) %>
   
@@ -11,8 +11,8 @@
 
 	
 	<% unless @order %>
-    <%= button_to 'Checkout', new_order_path, method: :get %>
+    <%= button_to t('.checkout'), new_order_path, method: :get %>
   <% end %>
-  <%= button_to 'Svuota carrello', cart, method: :delete,
+  <%= button_to t('.empty'), cart, method: :delete,
       data: { confirm: 'Svuotare davvero il carrello?' } %>
 <% end %>
