--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,7 +4,7 @@
 </p>
 <% end %>
 
-<h1>Catalogo</h1>
+<h1><%= t('.title_html') %></h1>
 
 <% @products.each do |product| %>
   <div class="entry">
@@ -13,7 +13,7 @@
     <p><%= sanitize(product.description) %></p>
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
-      <%= button_to 'Add to cart', line_items_path(product_id: product), remote: true %>
+      <%= button_to t('.add_html'), line_items_path(product_id: product), remote: true %>
     </div>
   </div>
 <% end %>
