Added the final translations.

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <div class="depot_form">
 	<fieldset>
-		<legend>Inserire le informazioni richieste</legend>
+		<legend><%= t('.legend') %></legend>
 		<%= render 'form' %>
 	</fieldset>
 </div>
